add usage-service InfluxDB pipeline and resilience fixes
- Introduced the new usage-service pipeline: Kafka event consumption, InfluxDB3 writes, a device-id cache refreshed from device-service periodically.

- Added topic/error-handling kafka configuration to make use of the dead letter queue (dlq) pattern and allow retries for usage-service.

- Added an endpoint to device-service for returning all device IDs. DeviceService and DeviceRepository classes are also updated to support this endpoint.

- Enabled connect and read timeouts for RestClient beans for both device-service and usage-service. Both services application.properties are updated to have timeout-ms values for both connect and read.

- Updated docker-compose file to remove pgadmin and setup InfluxDB 3. I removed pgadmin because psql is more than enough.

- Added INFLUXDB3_AUTH_TOKEN as a secret to .env.example and removed pgadmin related secrets since they are not needed anymore.

- Tightened validation messages for dtos.

- Fixed a bug where user alert settings were being reset on partial updates with necessary null checks.